flux-snapshot/2023-04-20-23-18-17-exit101
    Updating crates.io index
    Checking sorting v0.1.0 (/Users/cole/scratch/flux/flux-demos/sorting)
error[E0308]: mismatched types
  --> src/sort.rs:75:39
   |
75 |         List::Cons(i, next) => insort(i, insertion_sort(next)),
   |                                ------ ^ expected `i32`, found `&i32`
   |                                |
   |                                arguments to this function are incorrect
   |
note: function defined here
  --> src/sort.rs:58:4
   |
58 | fn insort(n: i32, list: SortedList) -> SortedList {
   |    ^^^^^^ ------
help: consider dereferencing the borrow
   |
75 |         List::Cons(i, next) => insort(*i, insertion_sort(next)),
   |                                       +

For more information about this error, try `rustc --explain E0308`.
error: could not compile `sorting` (bin "sorting") due to previous error
